# sentinai

./: API_DOCUMENTATION.md  README.md
.github/workflows/: ci.yml
sentinai-backend/: Cargo.toml
sentinai-backend/migrations/: 20231010000000_initial_schema.down.sql  database.sql
sentinai-backend/src/: app.rs  config.rs  error.rs  main.rs  state.rs
sentinai-backend/src/db/: mod.rs  pipeline_repo.rs  pool.rs  project_repo.rs  security_repo.rs  user_repo.rs
sentinai-backend/src/domain/: build.rs  mod.rs  pipeline.rs  project.rs  realtime.rs  security.rs  user.rs
sentinai-backend/src/routes/: auth.rs  github.rs  health.rs  mod.rs  pipelines.rs  projects.rs  security.rs
sentinai-backend/src/services/: ci_generator.rs  github_service.rs  mod.rs  pipeline_service.rs  security_service.rs
sentinai-backend/src/services/snapshots/: sentinai_backend__services__ci_generator__tests__node_ci_yaml.snap  sentinai_backend__services__ci_generator__tests__python_ci_yaml.snap  sentinai_backend__services__ci_generator__tests__rust_ci_yaml.snap  sentinai_backend__services__ci_generator__tests__unknown_ci_yaml.snap
sentinai-backend/src/utils/: jwt.rs  logging.rs  middleware.rs  mod.rs
sentinai-frontend/: .env.local.example  package-lock.json  package.json
sentinai-frontend/app/: layout.tsx  page.tsx
sentinai-frontend/app/dashboard/: page.tsx
sentinai-frontend/components/: authprovider.tsx  button.tsx  navbar.tsx  protectedroute.tsx  sidebar.tsx
sentinai-frontend/lib/: api.ts  auth.ts  types.ts
sentinai-frontend/styles/: globals.css
(+4 files in other folders)
