[package]
name = "sentinai-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "tracing"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "ansi"] }
tracing-appender = "0.2"
tracing-error = "0.2"
once_cell = "1.19"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
jsonwebtoken = "9.2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-stream = { version = "0.1.18", features = ["sync"] }

[dev-dependencies]
proptest = "1.4"
insta = { version = "1.36", features = ["json"] }
assert-json-diff = "2.0"
tower = { version = "0.4", features = ["util"] }
